# uringcore

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  VERIFY.md  WALKTHROUGH.md  pyproject.toml  run_stdlib_tests.py  strace_log.txt
.github/workflows/: ci.yml  verify.yml
benchmarks/: __init__.py  benchmark_suite.py  final_comparison.txt  final_report.txt  quick_bench.py  server_benchmark.py  syscall_bench.py  udp_bench.py
python/uringcore/: __init__.py  _core.pyi  datagram.py  loop.py  metrics.py  pipes.py  policy.py  server.py  ssl_transport.py  subprocess.py  transport.py
python/uringloop/: __init__.py  loop.py  policy.py
scripts/: run_tests.sh
src/: buf_ring.rs  buffer.rs  error.rs  fixed_fd.rs  future.rs  handle.rs  lib.rs  ring.rs  scheduler.rs  task.rs  timer.rs
tests/: bench_gather.py  conftest.py  debug_buffer.py  debug_future.py  debug_sockpair.py  profile_concurrency.py  repro_buf_limit.py  repro_call_soon.py  repro_dup.py  repro_issue.py  repro_mem.py  repro_pbuf.py  repro_pickle.py  repro_reader.py  repro_strace.py  repro_wait_for.py  test_asyncio_compat.py  test_backpressure.py  test_basic.py  test_datagram.py  test_fifo_ordering.py  test_future.py  test_generation_validation.py  test_integration.py  test_pbuf.py  test_production_stress.py  test_realworld_stress.py  test_resource_cleanup.py  test_send_zc.py  test_ssl.py  test_strace.py  test_subprocess.py  test_udp_overflow.py  test_udp_recvfrom.py  test_udp_sendto.py  test_unix_datagram.py  test_unix_server.py
tests/e2e/: __init__.py
tests/e2e/fastapi/: test_fastapi.py
tests/e2e/starlette/: test_starlette.py
tests/verify/: app.py  run_ci.sh  stream_app.py  test_multishot_accept.py  test_pbuf_ring.py  test_registered_fds.py  test_timer.py
tests/verify/testproj/testproj/: asgi.py  settings.py  urls.py
