[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "uringcore"
version = "0.1.0"
description = "Completion-driven asyncio event loop using io_uring"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ankit Kumar Pandey", email = "ankitkpandey1@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
]
keywords = ["asyncio", "io_uring", "event-loop", "uvloop", "networking"]

[project.urls]
Repository = "https://github.com/ankitkpandey1/uringcore"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "uringcore._core"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
