[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "uringcore"
version = "1.0.0"
description = "High-performance asyncio event loop for Python using io_uring - 36% faster than asyncio"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ankit Kumar Pandey", email = "ankitkpandey1@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
keywords = ["asyncio", "io_uring", "event-loop", "uvloop", "networking", "high-performance", "linux", "rust"]

[project.urls]
Homepage = "https://github.com/ankitkpandey1/uringcore"
Repository = "https://github.com/ankitkpandey1/uringcore"
Documentation = "https://github.com/ankitkpandey1/uringcore#readme"
Changelog = "https://github.com/ankitkpandey1/uringcore/releases"
"Bug Tracker" = "https://github.com/ankitkpandey1/uringcore/issues"

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "pandas>=2.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "uringcore._core"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
